--- a/A09/README.adoc
+++ b/A09/README.adoc
@@ -2,8 +2,12 @@
 
 Where did your run your tests? A laptop, or goldengate?
 
+Tests were run on my laptop.
+
 What are the performance specifications of the machine: number and speed of
 processors, size of RAM? (use `lscpu` and `free -m`)
+
+There are 8 processors with a speed of 1991.999 (CPU MHz) and 3983.99 (BogoMIPS). The size of the RAM is 7838 total bytes.
 
 = Single-process mandelbrot
 
@@ -13,11 +17,11 @@ the amount of time it takes to compute each image.
 [cols="1,1"]
 !===
 | Size | Time (s) 
-| 100 | todo
-| 400 | todo
-| 800 | todo
-| 1000 | todo
-| 2000 | todo
+| 100 | 0.039649
+| 400 | 0.449555
+| 800 | 2.420373
+| 1000 | 3.706000
+| 2000 | 12.662846
 !===
 
 = Multi-process mandelbrot
